--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
                 Implement a way to filter through listings using the search bar 
 
               -->
+
             <span class="input-group-addon" id="sizing-addon1"><span class="glyphicon glyphicon-search"></span></span>
-            <input type="text" class="form-control" placeholder="Search">
+            <input type="text" ng-model="filterText" class="form-control" placeholder="Search">
           </div>
           <div class="tableWrapper">
             <table class="table table-striped table-hover">
@@ -33,7 +34,14 @@
                       * populate the rows with the code and name of each listing
                       * include a way to remove individual listings
 
+
                 --> 
+                <tr ng-repeat="item in listings | filter: filterText">
+                  <td>{{item.code}}</td>
+                  <td>{{item.name}}</td>
+                  <td><button class="btn btn-info" ng-click="showDetails(item)">Show Details</button></td>
+                  <td><button class="btn btn-danger" ng-click="deleteListing($index)"><span class="glyphicon glyphicon-trash"></button></td>
+                </tr>
             </table>
           </div>
           <!-- 
@@ -41,8 +49,26 @@
               Write an HTML form that adds new listings to the directory 
 
             -->
+            <form class="form-inline">
+              <input type="text" ng-model="item.code"
+                placeholder="Code">
+              <input type="text" ng-model="item.name"
+                placeholder="Name">
+            </form>
+            <form class="form-inline">    
+              <input type="text" ng-model="item.coordinates.latitude"
+                placeholder="Latitude">
+              <input type="text" ng-model="item.coordinates.longitude"
+                placeholder="Longitude">
+            </form>    
+              <input type="text" ng-model="item.address"
+                placeholder="Address"> <br/>
+              <button class="btn btn-success" ng-click= "addListing()" >Add Listing</button>
         </div>
         <div class="col-md-6">
+          <br/>
+          <br/>
+          <br/>
           <div class="jumbotron">
             <h2>Detailed Information</h2>
             <!-- 
@@ -51,6 +77,11 @@
                    * consider how to use ng-click within the the table to implement this feature
 
              -->
+              <p><font size="3">Code: {{selectedItem.code}}</font></p>
+              <p><font size="3">Name: {{selectedItem.name}}</font></p>
+              <p><font size="3">Latitude: {{selectedItem.coordinates.latitude}}</font></p>
+              <p><font size="3">Longtitude: {{selectedItem.coordinates.longitude}}</font></p>
+              <p><font size="3">Address: {{selectedItem.address}}</font></p>
           </div>
         </div>
       </div>
